--- a/spec/fixtures/inventory.yml
+++ b/spec/fixtures/inventory.yml
@@ -17,12 +17,14 @@ discounts:
     applicable_item_count: null
     applicable_item_id: null
     usable: true
+    priority: 1
   batch_discount_on_a:
     global: false # only applicable to single inventory items
     deductible_type: unit
     deductible_amount: null
-    fixed_amount_total: 90 
+    fixed_amount_total: 90
     application_context: batch
     applicable_item_id: 1
     applicable_item_count: 2
     usable: true
+    priority: 1
